--- a/sources/sass/components/_deck.scss
+++ b/sources/sass/components/_deck.scss
@@ -5,4 +5,8 @@
     &.playable {
         padding-top: 60px;
     }
+    &--supporting {
+        position: absolute;
+        right: 200vw;
+    }
 }
