--- a/sources/templates/heroes.twig
+++ b/sources/templates/heroes.twig
@@ -5,6 +5,7 @@
 
     <div class="container">
         <h1>{{ subtitle }}</h1>
+        <div class="deck deck--supporting" data-module="skills"></div>
         <div class="deck" data-module="heroes"></div>
     </div>
 
