--- a/sources/sass/components/_hero.scss
+++ b/sources/sass/components/_hero.scss
@@ -1,16 +1,40 @@
 .card {
     &--format {
         &-hero {
-            // width: 60rem;
-            width: 53.8rem;
-            height: 40.4rem;
-
-            .icon {
-                width: 16.6rem;
-                text-align: center;
-                &:first-child {
-                    margin-left: 0.8rem;
+            width: 64.2rem;
+            // height: 40.4rem;
+            padding-right: 1.6rem;
+            padding-left: 1.6rem;
+            &:nth-child(2n) {
+                @media print {
+                    margin-bottom: 65px;
                 }
+                &:last-child {
+                    @media print {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+
+            > .region {
+                > .title {
+                    font-weight: bold;
+                    font-size: 1.4rem;
+                }
+                > .corner {
+                    .icon {
+                        width: 16.6rem;
+                        text-align: center;
+                        margin: 0 0 0 7.6rem;
+                        & + .icon {
+                            margin-left: 1.6rem;
+                        }
+                    }
+                }
+            }
+
+            .card {
+                margin-bottom: 0.8rem;
             }
         }
     }
@@ -18,28 +42,22 @@
     .region {
         &.columns {
             flex-wrap: nowrap;
-            margin-bottom: 1.2rem;
+            margin-bottom: 0.8rem;
         }
     }
 
     .columns {
         display: flex;
         // height: 100%;
+        flex-wrap: wrap;
         width: 100%;
         justify-content: space-between;
         align-items: stretch;
         align-content: stretch;
         .column {
-            padding: 0 0.8rem;
+            width: 16.6rem;
             &-1 {
-                width: 7.6rem;
-            }
-            &-2 {
-                // width: 31.8rem;
-                width: 25.6rem;
-            }
-            &-3 {
-                width: 18.6rem;
+                width: 6rem;
             }
         }
     }
@@ -81,6 +99,14 @@
             line-height: 3.6rem;
             font-size: 1.6rem;
             font-weight: bold;
+        }
+    }
+
+    .techniques,
+    .progress,
+    .income {
+        + .description {
+            margin-top: 1rem;
         }
     }
 
@@ -128,7 +154,7 @@
         display: flex;
         flex-wrap: wrap;
         width: 13rem;
-        margin: 0 0 1.4rem;
+        margin: 0;
         font-family: $font-default-serif;
         &-point {
             width: 2.5rem;
@@ -182,7 +208,7 @@
             position: relative;
             width: 2.5rem;
             height: 2.5rem;
-            margin: 0.4rem 0.4rem 0 0;
+            margin: 0.4rem 0.32rem 0 0;
             text-align: center;
             line-height: 2.1rem;
             font-size: 1.2rem;
@@ -218,6 +244,22 @@
                 &::after {
                     content: none;
                 }
+            }
+        }
+    }
+
+    .summon-stats {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin: 0.6rem 0;
+        padding: 0;
+        list-style: none;
+        > li {
+            border: 0.2rem solid $color-black;
+            border-radius: 0.6rem;
+            + li {
+                margin-left: 0.4rem;
             }
         }
     }
