--- a/sources/templates/dashboard.twig
+++ b/sources/templates/dashboard.twig
@@ -7,17 +7,17 @@
 
     <div class="container container--fluid">
         <div class="dashboard">
-            <div class="deck playable" data-module="events-global" data-title="Wydarzenia globalne"></div>
-            <div class="deck playable" data-module="events-local" data-title="Wydarzenia lokalne"></div>
-            <div class="deck playable" data-module="traces" data-title="Poszlaki"></div>
-            <div class="deck playable" data-module="traces" data-title="Poszlaki"></div>
+            <div class="deck playable" data-module="events-global" data-title="Wydarzenia globalne" data-speech="wydarzenie globalne"></div>
+            <div class="deck playable" data-module="events-local" data-title="Wydarzenia lokalne" data-speech="wydarzenie lokalne"></div>
+            <div class="deck playable" data-module="traces" data-title="Poszlaka 1" data-speech="poszlakę 1"></div>
+            <div class="deck playable" data-module="traces" data-title="Poszlaka 2" data-speech="poszlakę 2"></div>
         </div>
         <div class="dashboard">
-            <div class="deck playable" data-module="locations" data-title="Lokacje"></div>
-            <div class="deck playable" data-module="search" data-title="Przeszukiwanie"></div>
-            <div class="deck playable" data-module="search-bronze" data-title="Przeszukiwanie - brąz"></div>
-            <div class="deck playable" data-module="search-silver" data-title="Przeszukiwanie - srebro"></div>
-            <div class="deck playable" data-module="search-gold" data-title="Przeszukiwanie - złoto"></div>
+            <div class="deck playable" data-module="locations" data-title="Lokacje" data-speech="lokacje"></div>
+            <div class="deck playable" data-module="search" data-title="Przeszukiwanie" data-speech="przeszukiwanie"></div>
+            <div class="deck playable" data-module="search-bronze" data-title="Przeszukiwanie - brąz" data-speech="brązową"></div>
+            <div class="deck playable" data-module="search-silver" data-title="Przeszukiwanie - srebro" data-speech="srebrną"></div>
+            <div class="deck playable" data-module="search-gold" data-title="Przeszukiwanie - złoto" data-speech="złotą"></div>
         </div>
     </div>
 
