--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -8,6 +8,7 @@
     border: 0.2rem solid $color-black;
     border-radius: 0.6rem;
     background-color: $color-white;
+    cursor: pointer;
     -webkit-print-color-adjust: exact;
     @media print {
         margin: 0 1px 1px 0;
