--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import './components/fake-font-preload';
 @import './components/resizer';
+@import './components/speech';
 @import './components/dashboard';
 @import './components/deck';
 @import './components/card';
